# NFC

./: README.md
NfcdlibEx1_BasicDiscLoop_s32k118/: .cproject  .project  Version.txt
NfcdlibEx1_BasicDiscLoop_s32k118/Debug_FLASH/: NfcdlibEx1_BasicDiscLoop_s32k118.args  NfcdlibEx1_BasicDiscLoop_s32k118.elf  NfcdlibEx1_BasicDiscLoop_s32k118.map  makefile
NfcdlibEx1_BasicDiscLoop_s32k118/Release_FLASH/: NfcdlibEx1_BasicDiscLoop_s32k118_V1_1.args  NfcdlibEx1_BasicDiscLoop_s32k118_V1_1.elf  NfcdlibEx1_BasicDiscLoop_s32k118_V1_1.map  NfcdlibEx1_BasicDiscLoop_s32k118_V1_1.srec  makefile  sources.mk
NfcdlibEx1_BasicDiscLoop_s32k118/S32KSDK_S32K118_PE/: Cpu.c  Cpu.h  canCom0.c  canCom0.h  clockMan1.c  clockMan1.h  dmaController1.c  dmaController1.h  lpspiCom1.c  lpspiCom1.h  lpuart0.c  lpuart0.h  pin_mux.c  pin_mux.h
NfcdlibEx1_BasicDiscLoop_s32k118/intfs/: phApp_Init.h  ph_NxpBuild_App.h
NfcdlibEx1_BasicDiscLoop_s32k118/src/: NfcrdlibEx1_BasicDiscoveryLoop.c  phApp_Init.c
S32K116 + NCF3320/DAL/: .project
S32K116 + NCF3320/NfcrdlibEx1_BasicDiscLoop_s32k116/: .cproject  .project
S32K116 + NCF3320/NxpNfcRdLib/comps/phhalHw/: CMakeLists.txt
S32K116 + NCF3320/NxpNfcRdLib/comps/phhalHw/src/Ncx3320/: phhalHw_Ncx3320.h  phhalHw_Ncx3320_Cmd.c  phhalHw_Ncx3320_Int.c  phhalHw_Ncx3320_Int.h  phhalHw_Ncx3320_Settings.h  phhalHw_Ncx3320_Settings65x65.h  phhalHw_Ncx3320_Wait.c
S32K116 + NCF3320/NxpNfcRdLib/comps/phhalHw/src/Ncx3330/: phhalHw_Ncx3330_Instr.c  phhalHw_Ncx3330_Int.c  phhalHw_Ncx3330_Int.h  phhalHw_Ncx3330_Wait.c  phhalHw_Ncx3330_Wait.h
(+3008 files in other folders)
